Clean repo: remove IDE & build files and add proper .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,64 @@
-﻿# Maven / Java
-target/
-!.mvn/wrapper/maven-wrapper.jar
-/.idea/
-/*.iml
-*.log
+﻿##############################
+# Java / Maven / TestNG
+##############################
+
+# Compiled class files
 *.class
+
+# Log files
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
 *.jar
 *.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+##############################
+# Maven
+##############################
+
+target/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/timing.properties
+
+##############################
+# IntelliJ IDEA
+##############################
+
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# User-specific files
+*.env
+*.local
+*.cache
+
+##############################
+# OS Files
+##############################
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# macOS
 .DS_Store
-.vscode/
-out/
-.settings/
-bin/
-*/.gradle/
-local.properties
-.env
+.AppleDouble
+.LSOverride
+
+# Linux
+*~
+
